修复删除会话bug

--- a/chatRoom/index.html
+++ b/chatRoom/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="keywords" content="socket.io,Vue.js,Express.js,多功能,聊天系统">
+  <meta name="description" content="集聊天,天气预报,日程管理,看电视,看新闻,玩游戏于一体的聊天系统">
   <title>WebChat</title>
   <link rel="shortcut icon" type="image/ico" href="./static/webchat.ico" />
   <!--只有这样，url输入的时候才不会提示amap不存在-->
